# ObsidianPilot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  QUICK_START_ObsidianPilot.md  README.md  RELEASE_NOTES_1.1.3.md  RELEASE_NOTES_1.1.5.md  RELEASE_NOTES_1.1.6.md  RELEASE_NOTES_1.1.7.md  RELEASE_NOTES_1.1.9.md  RELEASE_NOTES_2.0.3.md  RELEASE_NOTES_2.1.0.md  RELEASE_NOTES_2.1.1.md  RELEASE_NOTES_2.1.2.md  RELEASE_NOTES_2.1.3.md  RELEASE_NOTES_ObsidianPilot_2.0.3.md  TESTING.md  WINDOWS_SETUP.md  claude_desktop_config_example.json  pyproject.toml  requirements.txt  test_fast_search.py
docs/: Build_Reasoning-Friendly_MCP_README.md  FAST_SEARCH_IMPLEMENTATION_PLAN.md  FastMCP_README.md  MCP_INSPECTOR_EXAMPLES.md  OPTIMIZATION_SUMMARY.md  Old search notes tool archive.md  PyPI_Publishing_Guide.md  SEARCH_WORKAROUNDS.md  obsidian_mcp_structure_start_README.md  obsidian_rest_api_README.md  packaging_distributing_FastMCP_README.md  token_efficient_editing_plan.md
obsidian_mcp/: server.py
obsidian_mcp/models/: obsidian.py
obsidian_mcp/tools/: __init__.py  image_management.py  organization.py  search_discovery.py  view_note_images.py
obsidian_mcp/utils/: __init__.py  validators.py
obsidianpilot/: __init__.py  configure.py  constants.py  server.py
obsidianpilot/models/: __init__.py  obsidian.py
obsidianpilot/tools/: __init__.py  fast_search.py  link_management.py  note_management.py  organization.py  search_discovery.py
obsidianpilot/utils/: __init__.py  filesystem.py  fts_search.py  index_updater.py  persistent_index.py  validation.py  validators.py
pypi-env/: pyvenv.cfg
src/: constants.py  server.py
src/models/: __init__.py  obsidian.py
src/tools/: __init__.py  link_management.py  note_management.py  organization.py  search_discovery.py
src/utils/: obsidian_api.py  validation.py  validators.py
test-build/: pyvenv.cfg
tests/: conftest.py  run_tests.py  test_api_connection.py  test_backlinks_debug.py  test_comprehensive.py  test_data_validation.py  test_direct_api.py  test_get_note_debug.py  test_integration.py  test_link_management.py  test_link_validity.py  test_list_folders.py  test_list_notes.py  test_list_notes_debug.py  test_list_tags.py  test_live.py  test_local_server.py  test_mcp_final.py  test_merge_strategy_demo.py  test_search_by_date.py  test_search_debug.py  test_search_tool_simple.py  test_server.py  test_tag_reading.py  test_tag_search_comprehensive.py  test_token_efficient_editing.py  test_unit.py
