[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-mcp"
version = "1.1.7"
description = "MCP server for interacting with Obsidian vaults through the Local REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nate Strong", email = "nate@example.com"}
]
keywords = ["mcp", "obsidian", "fastmcp", "llm", "ai", "notes", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.7.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/natestrong/obsidian-mcp"
Repository = "https://github.com/natestrong/obsidian-mcp"
Issues = "https://github.com/natestrong/obsidian-mcp/issues"

[project.scripts]
obsidian-mcp = "src.server:main"

[tool.setuptools]
packages = ["src", "src.tools", "src.utils", "src.models"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]