[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ObsidianPilot"
version = "2.1.0"
description = "ObsidianPilot: Enhanced MCP server with token-efficient editing for Obsidian vaults"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "that0n3guy", email = "none@gmail.com"}
]
keywords = ["obsidian", "mcp", "fastmcp", "llm", "ai", "notes", "knowledge-management", "token-efficient", "pilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.8.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "urllib3>=2.0.0",
    "aiofiles>=23.0.0",
    "pyyaml>=6.0.0",
    "pillow>=9.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/that0n3guy/ObsidianPilot"
Repository = "https://github.com/that0n3guy/ObsidianPilot"
Issues = "https://github.com/that0n3guy/ObsidianPilot/issues"

[project.scripts]
obsidianpilot = "obsidianpilot.server:main"

[tool.setuptools]
packages = ["obsidianpilot", "obsidianpilot.tools", "obsidianpilot.utils", "obsidianpilot.models"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]